@@ -22,8 +22,9 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -118,7 +119,7 @@ public class GraphSchemaMapper {
 
     public static void main(String[] args) throws IOException {
         String path = "groot-server/src/test/resources/schema.json";
-        String schemaJson = Files.readString(Path.of(path));
+        String schemaJson = new String(Files.readAllBytes(Paths.get(path)), StandardCharsets.UTF_8);
         GraphSchema graphSchema = GraphSchemaMapper.parseFromJson(schemaJson).toGraphSchema();
         GraphSchemaMapper mapper = GraphSchemaMapper.parseFromSchema(graphSchema);
         System.out.println(mapper.toJsonString());
